# gsd-lite

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml
.github/workflows/: publish-reader.yaml  publish.yaml
.planning/: AGENTS.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-templates/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md
.planning/phases/01.7-refactor-artifacts-and-protocols-and-workflows-to-synergy-with-grep/: 01.7-01-PLAN.md  01.7-02-PLAN.md  01.7-03-PLAN.md  01.7-04-PLAN.md  01.7-CONTEXT.md
.planning/templates/: CONTEXT_TEMPLATE.md  LOOPS_TEMPLATE.md  README.md  SUMMARY_TEMPLATE.md
eval/: ANALYSIS.md
gsd-lite/: ARCHITECTURE.md  HISTORY.md  INBOX.md  PROJECT.md  WORK.md
gsd-lite/docs/: reader-styleguide.md
gsd-lite/template/: PROTOCOL.md  STATE.md
gsd-lite/workflows/: moodboard.md  whiteboard.md
gsd_lite/: HISTORY.md  PROTOCOL.md  STATE.md  WORK.md
plugins/reader/: generate_worklog_viewer.py  parse_worklog.py  worklog.html
plugins/reader-vite/: README.md  cli.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
plugins/reader-vite/src/: context-parser.ts  diagram-overlay.ts  main.ts  parser.ts  renderer.ts  syntax-highlight.ts  types.ts  vite-plugin-worklog.ts
scripts/: EVAL_SCHEMA.md  debug_eval_P2_ses399a5.json  eval_config.yaml  eval_consume.py  eval_ingest.py  eval_transform.py  layer2_vertex.py  token_audit.py
src/gsd_lite/: __main__.py
src/gsd_lite/template/: AGENTS.md  INBOX.md  (+4 more)
test/: install.test.mjs
tests/evals/: clone_workspace.sh
(+32 files in other folders)
