[project]
name = "gsd-lite"
version = "1.21.2"
description = "A minimal protocol for Getting Things Done with AI agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "sqlmodel>=0.0.22",
    "pyyaml>=6.0",
    "google-cloud-aiplatform[evaluation]>=1.137.0",
]


[project.optional-dependencies]
dev = [
    "jsonpickle>=3.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
gsd-lite = "gsd_lite.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gsd_lite"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = "echo 'Build handled by GitHub Action'"